assets/styles/partials/homepage/home-gallery.scss
@import "../colors";
@import "../utilities";

.gallery {
  @include flex-grid(4, 16px);
  display: flex;
  flex-flow: row wrap;
  gap: 1rem;

  @media (max-width: 1240px) {
    @include flex-grid(3, 16px);
  }

  @media (max-width: 960px) {
    @include flex-grid(2, 16px);
  }

  @media (max-width: 450px) {
    @include flex-grid(1, 16px);
  }

  &-img {
    height: auto;
    width: 100%;

    &:hover {
      cursor: pointer;
    }
  }
}

.modal-background {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100vh;
  z-index: 10;
  background-color: rgb(0, 0, 0, 0.85);
  backdrop-filter: blur(30px);
}

.modal {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: center;
  background-color: $outer-space-3;
  border-radius: 10px;
  max-width: 95%;
  padding: 1rem;
  margin: auto;
  position: fixed;
  z-index: 100;
  top: calc(50% - 216px);
  left: calc(50% - 416px);
  overflow: scroll;
  max-width: 832px;

  @media (max-width: 832px) {
    top: 0;
    left: 0;
    height: 100vh;
  }

  &-img {
    height: auto;
    max-width: 400px;

    @media (max-width: 1254px) {
      max-width: 400px;
    }
  }

  &-content {
    color: $content;
    max-width: 400px;
    flex-grow: 1;
  }

  &-close {
    position: absolute;
    top: 0;
    right: 0;
    margin: 1rem;

    cursor: pointer;

    @media (max-width: 600px) {
      margin: 0.5rem;
    }
  }
}

